# diya

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  PHASE-2-FINALIZATION-SUMMARY.md  README.md  SECURITY.md  docker-compose.yml
backend/api/: .env.example  .gitignore  pyproject.toml
backend/api/app/: main.py  schemas.py
backend/api/app/api/: deps.py  error_handlers.py  router.py
backend/api/app/config/: logging.py  security.py  settings.py
backend/api/app/db/: base.py  session.py
backend/api/app/modules/accessory/: router.py  service.py
backend/api/app/modules/auth/: models.py  repository.py  router.py  service.py
backend/api/app/modules/safety/: __init__.py  models.py  repository.py  router.py  service.py
backend/api/app/services/: accessory_arbitrator.py  auth_service.py
backend/api/migrations/: env.py
backend/api/migrations/versions/: 0001_initial_schema.py  0de01c981a6c_recreate_safety_events.py  b18538fb70bb_initial_migration.py
backend/api/tests/: test_accessory_arbitrator.py  test_auth_service.py
diya_flutter/: pubspec.yaml
expoApp/: .gitignore  HARDWARE_QUICK_REFERENCE.md  app.json  package-lock.json  package.json  tailwind.config.js
hardware/smart-goggles/simulator/: .txt  README.md  analyze_hex.py  decode_diag.py  inspect_capture.py  pyproject.toml  run_capture_check.py
hardware/smart-goggles/simulator/app/: logging.py  main.py  state.py
hardware/smart-goggles/simulator/static/: app.js  index.html  style.css
hardware/smart-goggles/simulator/tests/: test_capture.py  test_command_capture.py
infra/: README.md
web-app/: package.json  pnpm-lock.yaml
web-next/: package-lock.json
(+924 files in other folders)
