[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-json-logger>=4.1.0",
    "uvicorn[standard]>=0.46.0",
]
