[project]
name = "api"
version = "0.1.0"
description = "2ndEye assistive platform — FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # web framework
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",

    # database
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",

    # validation and config
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "email-validator>=2.2.0",
    "python-dotenv>=1.2.2",

    # auth
    "python-jose[cryptography]>=3.5.0",
    "passlib==1.7.4",
    "bcrypt==4.0.1",

    # rbac
    "casbin>=1.36.3",

    # logging
    "python-json-logger>=4.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]
